--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^1.1.3",
     "chart.js": "^3.5.1",
+    "dotenv": "^16.0.3",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.5",
     "react-charts": "^3.0.0-beta.33",
